# operator_game_flutter

./: CONSTITUTION.md  README.md  pubspec.yaml  save.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/rfd/operator_game_flutter/: MainActivity.kt
docs/: SPEC_UI_PARITY.md
docs/interop/: HANDOFF_DARTPRO.md
integration_test/: simple_test.dart
lib/: main.dart
lib/src/providers/: diagnostic_provider.dart  game_state_provider.dart  nav_provider.dart  roster_provider.dart  roster_provider.g.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  simple.freezed.dart
lib/src/theme/: app_theme.dart
lib/src/widgets/: slime_card.dart  slime_detail_view.dart
rust/: Cargo.toml  cargo_output.txt
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_operator_game_flutter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_operator_game_flutter.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
